languages/io-automaton-fe/src/test/resources/invalid/VariableMoreThanOnceConflict.ioautomaton
package invalid;

automaton VariableMoreThanOnceConflict{

    input int i;
    output int j;
    
    variable int a;
    variable double a;
    
    state S;
    initial S;
}